# quant-udf

./: CODE_REVIEW.md  LICENSE  README.md  app.py  chart_test.html  pyproject.toml  requirements.txt
config/: gm_config.example.json  gm_config.json
scripts/: debug_worker_pipe.py  gm_ws_worker.py  smoke_endpoints.py  smoke_endpoints_local.py  test_ws_realtime_local.py  test_ws_stream_local.py  verify_gm_env.py  verify_gm_subscribe.py
tests/: conftest.py  test_search.py
udf_service/: __init__.py  juejin_client.py  models.py  realtime_ws.py  server.py
